--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js"
+    "start": "NODE_ENV=production node main.js",
+    "dev": "node main.js"
   },
   "author": "pizza61",
   "license": "MIT",
